--- a/Leasing/Pages/AdminsPage/AdminHistory.xaml
+++ b/Leasing/Pages/AdminsPage/AdminHistory.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Leasing.Pages.AdminsPage"
        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="820"
+      d:DesignHeight="550" d:DesignWidth="1030"
       Title="AdminHistory" Loaded="Page_Loaded">
 
     <Grid>
@@ -14,7 +14,7 @@
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="15*" />
+                    <ColumnDefinition Width="20*" />
                 </Grid.ColumnDefinitions>
                 <Grid.Resources>
                     <Style TargetType="materialDesign:PackIcon">
@@ -64,15 +64,24 @@
                     </ListView>
                 </Grid>
                 <Grid Grid.Column="1" Background="#FF221835" Name="RenderPages" Margin="0,0,-10,0">
-                    <Ellipse HorizontalAlignment="Left" Height="292" Margin="561,254,0,0" VerticalAlignment="Top" Width="376" Fill="#19FFFFFF"/>
-
-                    <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black" x:Name="CloseButton"   Margin="679,-5,0,379" Click="ExitClick" Cursor="Hand">
+                    <Ellipse HorizontalAlignment="Left" Height="197" Margin="868,483,0,0" VerticalAlignment="Top" Width="294" Fill="#19FFFFFF"/>
+                    <Ellipse HorizontalAlignment="Left" Height="220" Margin="-60,-166,0,0" VerticalAlignment="Top" Width="282" Fill="#19FFFFFF" RenderTransformOrigin="0.5,0.5">
+                        <Ellipse.RenderTransform>
+                            <TransformGroup>
+                                <ScaleTransform/>
+                                <SkewTransform/>
+                                <RotateTransform Angle="0.133"/>
+                                <TranslateTransform/>
+                            </TransformGroup>
+                        </Ellipse.RenderTransform>
+                    </Ellipse>
+                    <Button Style="{StaticResource MaterialDesignFloatingActionButton}" HorizontalAlignment="Left" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="Black" x:Name="CloseButton"   Margin="905,4,0,470" Click="ExitClick" Cursor="Hand">
                         <materialDesign:PackIcon Kind="Close" Foreground="White"/>
                     </Button>
                     <DataGrid x:Name="DataGR" Margin="22,56,11,102" AutoGenerateColumns="False" HorizontalScrollBarVisibility="Disabled">
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="АЙДИ КЛИЕНТА" Width="120" Binding="{Binding ClientID}"/>
-                            <DataGridTextColumn Header="АЙДИ МАШИНЫ" Width="120" Binding="{Binding CarID}"/>
+                            <DataGridTextColumn Header="АЙДИ КЛИЕНТА" Width="140" Binding="{Binding ClientID}"/>
+                            <DataGridTextColumn Header="АЙДИ МАШИНЫ" Width="140" Binding="{Binding CarID}"/>
                             <DataGridTextColumn Header="ДАТА НАЧАЛА" Binding="{Binding FormattedStartDate, Mode=OneWay}" />
                             <!-- Используем OneWay -->
                             <DataGridTextColumn Header="ДАТА КОНЦА" Binding="{Binding FormattedEndDate, Mode=OneWay}" />
@@ -80,11 +89,10 @@
                             <DataGridTextColumn Header="СТАТУС" Width="115" Binding="{Binding Status}"/>
                         </DataGrid.Columns>
                     </DataGrid>
-                    <Button Content="РЕДАКТИРОВАТЬ" HorizontalAlignment="Left" Margin="20,352,0,0" VerticalAlignment="Top" Click="EditDogovor"/>
-                    <Button Content="ДОБАВИТЬ" HorizontalAlignment="Left" Margin="603,352,0,0" VerticalAlignment="Top" Click="AddDogovor"/>
-                    <Button Content="ОБНОВИТЬ" HorizontalAlignment="Left" Margin="479,352,0,0" VerticalAlignment="Top" Click="Refresh"/>
-                    <Ellipse HorizontalAlignment="Left" Height="200" Margin="-23,-149,0,0" VerticalAlignment="Top" Width="233" Fill="#19FFFFFF"/>
-                    <Rectangle HorizontalAlignment="Left" Height="54" Margin="11,1,0,0" VerticalAlignment="Top" Width="80" RenderTransformOrigin="0.5,0.5">
+                    <Button Content="РЕДАКТИРОВАТЬ" HorizontalAlignment="Left" Margin="22,443,0,0" VerticalAlignment="Top" Click="EditDogovor"/>
+                    <Button Content="ДОБАВИТЬ" HorizontalAlignment="Left" Margin="853,443,0,0" VerticalAlignment="Top" Click="AddDogovor"/>
+                    <Button Content="ОБНОВИТЬ" HorizontalAlignment="Left" Margin="729,443,0,0" VerticalAlignment="Top" Click="Refresh"/>
+                    <Rectangle HorizontalAlignment="Left" Height="54" Margin="11,1,0,0" VerticalAlignment="Top" Width="77" RenderTransformOrigin="0.5,0.5">
                         <Rectangle.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
